<?xml version="1.0" encoding="utf-8"?>

<!--Assignment #: InClass08
File Name: Group25_InClass08 - fragment_current_weather.xml
Full Name: Kristin Pflug-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CurrentWeatherFragment" >

    <TextView
        android:id="@+id/current_cityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="TextView"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_temperatureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/current_temperature_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_cityName" />

    <TextView
        android:id="@+id/current_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/current_temperature_placeholder"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/current_temperatureLabel"
        app:layout_constraintTop_toBottomOf="@+id/current_cityName" />

    <TextView
        android:id="@+id/current_temperatureMaxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_temperature_max_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_temperatureLabel" />

    <TextView
        android:id="@+id/current_temperatureMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_temperature_placeholder"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toEndOf="@+id/current_temperatureMaxLabel"
        app:layout_constraintTop_toBottomOf="@+id/current_temperature" />

    <TextView
        android:id="@+id/current_temperatureMinLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_temperature_min_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_temperatureMaxLabel" />

    <TextView
        android:id="@+id/current_temperatureMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/current_temperature_placeholder"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/current_temperatureMinLabel"
        app:layout_constraintTop_toBottomOf="@+id/current_temperatureMax" />

    <TextView
        android:id="@+id/current_descriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_description_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_temperatureMinLabel" />

    <TextView
        android:id="@+id/current_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_description_placeholder"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toEndOf="@+id/current_descriptionLabel"
        app:layout_constraintTop_toBottomOf="@+id/current_temperatureMin" />

    <TextView
        android:id="@+id/current_humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_humidity_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_descriptionLabel" />

    <TextView
        android:id="@+id/current_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_percent_placeholder"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toEndOf="@+id/current_humidityLabel"
        app:layout_constraintTop_toBottomOf="@+id/current_description" />

    <TextView
        android:id="@+id/current_windSpeedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_wind_speed_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_humidityLabel" />

    <TextView
        android:id="@+id/current_windSpeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_windspeed_placeholder"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toEndOf="@+id/current_windSpeedLabel"
        app:layout_constraintTop_toBottomOf="@+id/current_humidity" />

    <TextView
        android:id="@+id/current_windDegreeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_wind_degree_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_windSpeedLabel" />

    <TextView
        android:id="@+id/current_windDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_winddegree_placeholder"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toEndOf="@+id/current_windDegreeLabel"
        app:layout_constraintTop_toBottomOf="@+id/current_windSpeed" />

    <TextView
        android:id="@+id/current_cloudinessLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_cloudiness_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_windDegreeLabel" />

    <TextView
        android:id="@+id/current_cloudiness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/current_percent_placeholder"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.925"
        app:layout_constraintStart_toEndOf="@+id/current_cloudinessLabel"
        app:layout_constraintTop_toBottomOf="@+id/current_windDegree" />

    <Button
        android:id="@+id/current_checkForecastButton"
        android:layout_width="257dp"
        android:layout_height="40dp"
        android:text="@string/current_button_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/current_cloudinessLabel" />

    <ImageView
        android:id="@+id/current_weatherIcon"
        android:layout_width="55dp"
        android:layout_height="52dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/current_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toEndOf="@+id/current_cityName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:src="@tools:sample/avatars" />
</androidx.constraintlayout.widget.ConstraintLayout>