<?xml version="1.0" encoding="utf-8"?>

<!--Assignment #: InClass08
File Name: Group25_InClass08 - forecast_list_item.xml
Full Name: Kristin Pflug-->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/forecastItem_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecastItem_currentTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="999.9F"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastItem_time" />

    <TextView
        android:id="@+id/forecastItem_maxTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="55dp"
        android:text="@string/forecast_item_max_label"
        app:layout_constraintStart_toEndOf="@+id/forecastItem_currentTemp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecastItem_maxTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        android:text="999.9F"
        app:layout_constraintStart_toEndOf="@+id/forecastItem_maxTempLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/forecastItem_weatherIcon"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/forecastItem_time"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/forecastItem_minTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="55dp"
        android:text="@string/forecast_item_min_label"
        app:layout_constraintStart_toEndOf="@+id/forecastItem_maxTemp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecastItem_minTemp"
        android:layout_width="48dp"
        android:layout_height="21dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        android:text="999.9F"
        app:layout_constraintStart_toEndOf="@+id/forecastItem_minTempLabel"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forecastItem_humidityLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/forecast_humidity_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastItem_currentTemp" />

    <TextView
        android:id="@+id/forecastItem_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="20dp"
        android:text="100%"
        app:layout_constraintStart_toEndOf="@+id/forecastItem_humidityLabel"
        app:layout_constraintTop_toBottomOf="@+id/forecastItem_maxTempLabel" />

    <TextView
        android:id="@+id/forecastItem_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forecastItem_humidityLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>